About section added

--- a/index.html
+++ b/index.html
@@ -75,6 +75,29 @@
       </article>
     </section>
     <!-- --------------about section-------------- -->
-    <section class="about"></section>
+    <section>
+      <div class="section-center about">
+        <!-- img -->
+        <figure class="about-img-container">
+          <img src="./images/about-bcg.jpeg" alt="" />
+        </figure>
+        <!-- info -->
+        <article class="about-info">
+          <div class="section-title">
+            <h3>about our</h3>
+            <h2>tea Station</h2>
+          </div>
+          <p class="about-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
+            adipisci excepturi porro laborum recusandae totam!
+          </p>
+          <p class="about-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
+            adipisci excepturi porro laborum recusandae totam!
+          </p>
+          <a href="about.html" class="btn">learn more</a>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
