Product section added

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </article>
     </section>
     <!-- --------------about section-------------- -->
-    <section>
+    <section class="about-section">
       <div class="section-center about">
         <!-- img -->
         <figure class="about-img-container">
@@ -96,6 +96,51 @@
             adipisci excepturi porro laborum recusandae totam!
           </p>
           <a href="about.html" class="btn">learn more</a>
+        </article>
+      </div>
+    </section>
+    <!-- --------------products section-------------- -->
+    <section class="products-section">
+      <div class="section-center products">
+        <!-- products info -->
+        <article class="products-info">
+          <div class="section-title">
+            <h3>Check Out</h3>
+            <h2>Our Products</h2>
+          </div>
+          <p class="product-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore
+            omnis aliquam nam soluta mollitia sit debitis doloribus perferendis
+            aspernatur. Quis odit laudantium sint perferendis facilis.
+          </p>
+          <a href="products.html" class="btn">Inventory</a>
+        </article>
+        <!-- products inventory -->
+        <article class="products-inventory">
+          <!-- single product -->
+          <div class="product">
+            <figure class="product-img-container">
+              <img src="./images/product-1.jpeg" alt="single product" />
+            </figure>
+            <h4 class="product-title">ginger peach tea</h4>
+            <h4 class="product-price">$6.99</h4>
+          </div>
+          <!-- single product -->
+          <div class="product">
+            <figure class="product-img-container">
+              <img src="./images/product-2.jpeg" alt="single product" />
+            </figure>
+            <h4 class="product-title">fruit sangria</h4>
+            <h4 class="product-price">$6.99</h4>
+          </div>
+          <!-- single product -->
+          <div class="product">
+            <figure class="product-img-container">
+              <img src="./images/product-3.jpeg" alt="single product" />
+            </figure>
+            <h4 class="product-title">white tea</h4>
+            <h4 class="product-price">$6.99</h4>
+          </div>
         </article>
       </div>
     </section>
