--- a/index.html
+++ b/index.html
@@ -144,5 +144,65 @@
         </article>
       </div>
     </section>
+    <!-- --------------services section-------------- -->
+    <section class="services-section">
+      <div class="section-title services-title">
+        <h3>explore</h3>
+        <h2>our services</h2>
+      </div>
+      <div class="section-center services">
+        <!-- single card -->
+        <article class="service-card">
+          <figure class="service-card-img-container">
+            <img src="./images/product-1.jpeg" alt="single service" />
+            <span class="service-icon">
+              <i class="fas fa-mortar-pestle fa"></i>
+            </span>
+          </figure>
+          <div class="service-card-info">
+            <h4>custom recipes</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+              doloremque architecto cumque deleniti perferendis voluptates?
+            </p>
+            <a href="products.html" class="btn service-btn">read more</a>
+          </div>
+        </article>
+        <!-- single card -->
+        <article class="service-card">
+          <figure class="service-card-img-container">
+            <img src="./images/product-2.jpeg" alt="single service" />
+            <span class="service-icon">
+              <i class="fas fa-home"></i>
+            </span>
+          </figure>
+          <div class="service-card-info">
+            <h4>home delivery</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+              doloremque architecto cumque deleniti perferendis voluptates?
+            </p>
+            <a href="products.html" class="btn service-btn">read more</a>
+          </div>
+        </article>
+        <!-- single card -->
+        <article class="service-card">
+          <figure class="service-card-img-container">
+            <img src="./images/product-3.jpeg" alt="single service" />
+            <span class="service-icon">
+              <i class="fas fa-mug-hot"></i>
+            </span>
+          </figure>
+          <div class="service-card-info">
+            <h4>tea aging</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+              doloremque architecto cumque deleniti perferendis voluptates?
+            </p>
+            <a href="products.html" class="btn service-btn">read more</a>
+          </div>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
