Contact added, General styles for form elements

--- a/index.html
+++ b/index.html
@@ -204,5 +204,77 @@
         </article>
       </div>
     </section>
+    <!-- --------------contact section-------------- -->
+    <section class="contact-section">
+      <div class="section-center contact">
+        <div class="contact-info-container">
+          <!-- contact info -->
+          <article class="contact-info">
+            <div class="contact-item">
+              <h4 class="contact-title">
+                <span class="contact-icon">
+                  <i class="fas fa-location-arrow"></i> Address
+                </span>
+              </h4>
+              <h4 class="contact-text">
+                123 Ave <br />
+                Los Angeles, CA
+              </h4>
+            </div>
+          </article>
+          <!-- contact info -->
+          <article class="contact-info">
+            <div class="contact-item">
+              <h4 class="contact-title">
+                <span class="contact-icon">
+                  <i class="fas fa-envelope"></i> Email
+                </span>
+              </h4>
+              <h4 class="contact-text">email@email.com</h4>
+            </div>
+          </article>
+          <!-- contact info -->
+          <article class="contact-info">
+            <div class="contact-item">
+              <h4 class="contact-title">
+                <span class="contact-icon">
+                  <i class="fas fa-phone"></i> Phone
+                </span>
+              </h4>
+              <h4 class="contact-text">+ 123 456 7890</h4>
+            </div>
+          </article>
+        </div>
+        <!-- contact form -->
+        <article class="contact-form">
+          <h3>contact us</h3>
+          <form action="">
+            <fieldset class="form-group">
+              <input
+                type="text"
+                placeholder="Name"
+                name="name"
+                class="form-control"
+              />
+              <input
+                type="email"
+                placeholder="Email"
+                name="email"
+                class="form-control"
+              />
+              <textarea
+                name="message"
+                id=""
+                placeholder="message"
+                rows="5s"
+                class="form-control"
+              ></textarea>
+            </fieldset>
+            <!-- form button -->
+            <button type="submit" class="btn submit-btn">Submit here</button>
+          </form>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
