--- a/index.html
+++ b/index.html
@@ -276,5 +276,27 @@
         </article>
       </div>
     </section>
+    <!-- --------------footer section-------------- -->
+    <footer class="footer">
+      <div class="section-center">
+        <div class="social-icons">
+          <!-- social icon -->
+          <a href="#" class="social-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <!-- social icon -->
+          <a href="#" class="social-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <!-- social icon -->
+          <a href="#" class="social-icon">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
+        <h4 class="footer-text">
+          &copy; <span>2025</span> <span>tea station</span> All right reserved
+        </h4>
+      </div>
+    </footer>
   </body>
 </html>
