--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
     <title>Tea Station || Home</title>
   </head>
   <body>
+    <!-- navbar icon -->
+    <span class="nav-btn" id="nav-btn">
+      <i class="fas fa-bars"></i>
+    </span>
     <!-- navbar -->
+    <nav class="navbar" id="navbar">
+      <div class="navbar-header">
+        <span class="nav-close" id="nav-close">
+          <i class="fas fa-times"></i>
+        </span>
+        <ul class="nav-items">
+          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="skills.html" class="nav-link">Skills</a></li>
+          <li><a href="about.html" class="nav-link">About</a></li>
+          <li><a href="products.html" class="nav-link">Products</a></li>
+        </ul>
+      </div>
+    </nav>
     <!-- --------------header section-------------- -->
     <header class="header">
       <div class="banner">
@@ -298,5 +315,7 @@
         </h4>
       </div>
     </footer>
+    <!-- javascript -->
+    <script src="./app.js"></script>
   </body>
 </html>
